# app/Http/Controllers/Api/Account/Profile/AccountController.php
@@ -8,7 +8,7 @@ use Illuminate\Http\Request;
 use App\Http\Controllers\Controller;
 use Illuminate\Support\Str;
 use Validator;
-use App\User;
+use App\Models\User;
 use Carbon\Carbon;
 
 class AccountController extends Controller
@@ -27,18 +27,18 @@ class AccountController extends Controller
      * Display current User data.
      *
      * @return \Illuminate\Http\Response
-     * 
+     *
      * @OA\Get(
      *     path="/api/profile/account",
      *     description="User data Page",
      *     tags={"Account"},
      *     security={{"bearerAuth":{}}},
      *     @OA\Response(
-     *         response=200, 
+     *         response=200,
      *         description="OK",
      *     )
      * )
-     * 
+     *
      */
     public function index()
     {
@@ -54,7 +54,7 @@ class AccountController extends Controller
      *
      * @param  \App\Http\Requests\Client\UpdateAccount  $request
      * @return \Illuminate\Http\Response
-     * 
+     *
      * @OA\Put(
      *     path="/api/profile/account",
      *     description="Update user data",
@@ -82,11 +82,11 @@ class AccountController extends Controller
      *        )
      *     ),
      *     @OA\Response(
-     *         response=200, 
+     *         response=200,
      *         description="OK",
      *     )
      * )
-     * 
+     *
      */
     public function update(Request $request)
     {
@@ -96,11 +96,11 @@ class AccountController extends Controller
             'email' => 'required|string|email|max:255|unique:users,email,'.$user->id,
             'password' => 'required|string|min:6',
         ]);
-        
+
         if ($validator->fails()) {
             return response()->json($validator->errors(), 422);
         }
-        
+
         //$user = Auth::user();
 
         if ($request->input('email')) {
@@ -114,18 +114,18 @@ class AccountController extends Controller
         $user->save();
 
         $user->updateAuthorizeCustomer();
-        
+
         return response()->json([
-            'status' => 'The account was successfully updated.', 
+            'status' => 'The account was successfully updated.',
         ]);
     }
-    
+
     /**
      * Update the specified resource in storage.
      *
      * @param  \App\Http\Requests\Client\UpdateAccount  $request
      * @return \Illuminate\Http\Response
-     * 
+     *
      * @OA\Put(
      *     path="/api/profile/account/login",
      *     description="User login",
@@ -152,11 +152,11 @@ class AccountController extends Controller
      *        )
      *     ),
      *     @OA\Response(
-     *         response=200, 
+     *         response=200,
      *         description="OK",
      *     )
      * )
-     * 
+     *
      */
     public function login(Request $request)
     {
@@ -164,15 +164,15 @@ class AccountController extends Controller
             'email' => 'required|email',
             'password' => 'required|string',
         ]);
-        
+
         if ($validator->fails()) {
             return response()->json($validator->errors(), 422);
         }
-        
+
         if (! $user = auth()->attempt($validator->validated())) {
             return response()->json(['error' => 'Unauthorized'], 401);
         }
-        
+
         return $this->createNewToken(auth()->user());
     }
 
@@ -181,7 +181,7 @@ class AccountController extends Controller
      *
      * @param  \App\Http\Requests\Client\UpdateAccount  $request
      * @return \Illuminate\Http\Response
-     * 
+     *
      * @OA\Put(
      *     path="/api/profile/account/admin_login",
      *     description="Administrator login",
@@ -208,11 +208,11 @@ class AccountController extends Controller
      *        )
      *     ),
      *     @OA\Response(
-     *         response=200, 
+     *         response=200,
      *         description="OK",
      *     )
      * )
-     * 
+     *
      */
     public function admin_login(Request $request)
     {
@@ -220,15 +220,15 @@ class AccountController extends Controller
             'email' => 'required|email',
             'password' => 'required|string',
         ]);
-        
+
         if ($validator->fails()) {
             return response()->json($validator->errors(), 422);
         }
-        
+
         if (! $user = auth()->guard('admin')->attempt($validator->validated())) {
             return response()->json(['error' => 'Unauthorized'], 401);
         }
-        
+
         return $this->createNewToken(auth()->guard('admin')->user());
     }
 
@@ -236,8 +236,8 @@ class AccountController extends Controller
      * Create a new user instance after a valid registration.
      *
      * @param  array  $data
-     * @return \App\User
-     * 
+     * @return \App\Models\User
+     *
      * @OA\Post(
      *     path="/api/profile/account/register",
      *     description="User register",
@@ -278,7 +278,7 @@ class AccountController extends Controller
      *                   type="string",
      *                   example="larapoints123"
      *               ),
-     * 
+     *
      *               @OA\Property(
      *                   property="phone_number",
      *                   description="Phone Number",
@@ -292,10 +292,20 @@ class AccountController extends Controller
      *                   example="11/12/1986"
      *               ),
      *               @OA\Property(
+     *                   property="gender",
+     *                   type="string",
+     *                   enum={"male", "female", "other"}
+     *               ),
+     *               @OA\Property(
      *                   property="address",
      *                   description="Address",
      *                   type="string",
      *                   example="larapoints123"
+     *               ),
+     *               @OA\Property(
+     *                   property="address_secondary",
+     *                   type="string",
+     *                   example="larapoints 123"
      *               ),
      *               @OA\Property(
      *                   property="country",
@@ -351,7 +361,7 @@ class AccountController extends Controller
      *                   type="string",
      *                   example="Postcode"
      *               ),
-     * 
+     *
      *               @OA\Property(
      *                   property="privacy",
      *                   description="Privacy",
@@ -368,11 +378,11 @@ class AccountController extends Controller
      *        )
      *     ),
      *     @OA\Response(
-     *         response=200, 
+     *         response=200,
      *         description="OK",
      *     )
      * )
-     * 
+     *
      */
     protected function register(Request $request)
     {
@@ -383,8 +393,10 @@ class AccountController extends Controller
             'password' => 'required|string|confirmed|min:8',
             'phone_number' => 'sometimes|nullable|string',
             'date_of_birth' => 'sometimes|nullable|date_format:m/d/Y',
+            'gender' => 'sometimes|nullable|string|in:male,female,other',
 
             'address' => 'sometimes|nullable|string',
+            'address_secondary' => 'sometimes|nullable|string',
             'country' => 'sometimes|nullable|string',
             'city' => 'sometimes|nullable|string',
             'state' => 'sometimes|nullable|string',
@@ -395,11 +407,11 @@ class AccountController extends Controller
             'billing_city' => 'sometimes|nullable|string',
             'billing_state' => 'sometimes|nullable|string',
             'billing_postcode' => 'sometimes|nullable|string',
-     
+
             'privacy' => 'accepted',
             'terms' => 'accepted',
         ]);
-        
+
         if ($validator->fails()) {
             return response()->json($validator->errors(), 422);
         }
@@ -409,9 +421,11 @@ class AccountController extends Controller
             'last_name' => $request->input('last_name'),
             'email' => $request->input('email'),
             'password' => Hash::make($request->input('password')),
-            
+            'gender' => $request->input('gender'),
+
             'phone_number' => $request->input('phone_number'),
             'address' => $request->input('address'),
+            'address_secondary' => $request->input('address_secondary'),
             'country' => $request->input('country'),
             'city' => $request->input('city'),
             'state' => $request->input('state'),
@@ -422,41 +436,41 @@ class AccountController extends Controller
             'billing_city' => $request->input('billing_city'),
             'billing_state' => $request->input('billing_state'),
             'billing_postcode' => $request->input('billing_postcode'),
-            
+
             'api_token' => Str::random(60),
         ];
-        
+
         if ($request->has('date_of_birth')) {
             $data['date_of_birth'] = $request->filled('date_of_birth') ? Carbon::createFromFormat('m/d/Y', $request->input('date_of_birth')) : null;
         }
-        
+
         $user = User::create($data);
-        
+
         $token = Str::random(60);
         $user->forceFill([
             'api_token' => hash('sha256', $token),
         ])->save();
-        
+
         return response()->json(['user' => $user, 'token' => $token]);
     }
-    
+
     /**
      * Update the specified resource in storage.
      *
      * @param  \App\Http\Requests\Client\UpdateAccount  $request
      * @return \Illuminate\Http\Response
-     * 
+     *
      * @OA\Put(
      *     path="/api/profile/account/refresh",
      *     description="User refresh",
      *     tags={"Account"},
      *     security={{"bearerAuth":{}}},
      *     @OA\Response(
-     *         response=200, 
+     *         response=200,
      *         description="OK",
      *     )
      * )
-     * 
+     *
      */
     public function refresh(Request $request)
     {
@@ -464,24 +478,24 @@ class AccountController extends Controller
         return $this->createNewToken($user);
     }
 
-    
+
     /**
      * Destroy the specified resource in storage.
      *
      * @param  \Illuminate\Http\Request  $request
      * @return \Illuminate\Http\Response
-     * 
+     *
      * @OA\Delete(
      *     path="/api/profile/account",
      *     description="User destroy",
      *     tags={"Account"},
      *     security={{"bearerAuth":{}}},
      *     @OA\Response(
-     *         response=200, 
+     *         response=200,
      *         description="OK",
      *     )
      * )
-     * 
+     *
      */
     public function destroy(Request $request)
     {
@@ -490,10 +504,10 @@ class AccountController extends Controller
         $user->delete();
 
         return response()->json([
-            'status' => 'The account was successfully destroyed.', 
+            'status' => 'The account was successfully destroyed.',
         ]);
     }
-    
+
     private function createNewToken($user)
     {
         $token = Str::random(60);
@@ -503,8 +517,8 @@ class AccountController extends Controller
         ])->save();
 
         return response()->json([
-            'token' => $token, 
+            'token' => $token,
         ]);
-        
+
     }
 }
